--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <ul class="menu__list">
                     <li><a href="https://compotomsk.github.io/About1Us/" class="menu__link">о нас</a></li>
                     <li><a href="https://compotomsk.github.io/products/" class="menu__link">продукт</a></li>
-                    <li><a href="/страницы/события.html" class="menu__link">события</a></li>
+                    <li><a href="https://compotomsk.github.io/events/" class="menu__link">события</a></li>
                 </ul>
             </div>
         </nav>
