--- a/index.html
+++ b/index.html
@@ -371,10 +371,12 @@
         </main>
         
         <div class="credits">
+            <p>© 2025 Zoro game store</p>
             <img src="https://github.com/CompotOmsk/55/blob/main/Rectangle%209.png?raw=true" alt="Zoro Game" loading="lazy">
             <p>Website created by Zoro Game</p>
         </div>
     </div>
 </body>
 </html>
+
 
